appservices/domain/rollouts-demo-istio/domain-istio-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: domain-istio
  labels:
    istio-injection: enabled
spec: {}
